Refinamento da UX

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 </section>
 
 <section class="result-section">
-    <h2 id="resultMessage">Selecione uma opção acima</h2>
+    <div id="resultCard" class="result-card">
+        <h2 id="resultMessage">Selecione uma opção acima</h2>
+    </div>
 </section>
 
     </main>
